# pulsee

./: README.md
pulse-agent-scheduler/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
pulse-agent-scheduler/src/: idl.ts  index.ts
pulse-ui/: .env.development.example  .gitignore  README.md  index.html  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
pulse-ui/patches/: eventemitter3@5.0.4.patch
pulse-ui/src/: App.tsx  index.css  main.tsx
pulse-ui/src/components/: CreateEventForm.tsx  MyTickets.tsx  OnboardingModal.tsx  WalletButton.tsx  WalletProvider.tsx
pulse-ui/src/components/agent/: AddBudgetModal.tsx  AgentCommandCenter.tsx  LiveLog.tsx  (+3 more)
pulse-ui/src/contexts/: AgentsContext.tsx  AuthContext.tsx  EventsContext.tsx  MarketContext.tsx  ToastContext.tsx
pulse-ui/src/hooks/: index.ts  useAIAgent.ts  useEvents.ts  usePrimaryMarket.ts  useProgram.ts  useSecondaryMarket.ts  useTransactions.ts
pulse-ui/src/idl/: pulse.json
pulse-ui/src/types/: pulse.ts
pulse-ui/src/utils/: accounts.ts  subscriptions.ts
smart-contract/: .gitignore  Anchor.toml  README.md  package.json
smart-contract/programs/pulse/: Cargo.toml
smart-contract/programs/pulse/src/: lib.rs
smart-contract/programs/pulse/src_backup/instructions/: admin.rs  events.rs  mod.rs  user.rs
smart-contract/pulse/: Anchor.toml
smart-contract/pulse/tests/: escrow.ts  pulse.ts
smart-contract/scripts/: README.md  create-demo-data.ts  index.ts  init-config.ts  test-full-flow.ts  utils.ts
smart-contract/tests/: pulse.ts
(+39 files in other folders)
